--- a/app/src/main/res/layout/favourite_fragment.xml
+++ b/app/src/main/res/layout/favourite_fragment.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/favouriteFragment">
+    android:id="@+id/favouriteFragment"
+    tools:context=".view.FavouriteRecipeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipesRecycler"
