--- a/app/src/main/res/layout/new_recipe_fragment.xml
+++ b/app/src/main/res/layout/new_recipe_fragment.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipe"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".view.NewOrEditRecipe">
 
     <ScrollView
         android:id="@+id/scrollContent"
