--- a/app/src/main/res/layout/recipe_view.xml
+++ b/app/src/main/res/layout/recipe_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    tools:context="view.SeparateRecipeFragment"
     tools:ignore="ScrollViewCount">
     
     <androidx.appcompat.widget.LinearLayoutCompat
