--- a/app/src/main/res/layout/new_recipe_fragment.xml
+++ b/app/src/main/res/layout/new_recipe_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/recipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.NewOrEditRecipe">
+    tools:context=".view.NewOrEditedRecipeFragment">
 
     <ScrollView
         android:id="@+id/scrollContent"
@@ -46,13 +46,26 @@
                 app:layout_constraintTop_toBottomOf="@id/name"
                 tools:layout_editor_absoluteX="8dp"/>
 
+            <EditText
+                android:id="@+id/author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:hint="@string/author"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine"
+                android:minHeight="48dp"
+                android:textColorHint="#757575"
+                app:layout_constraintTop_toBottomOf="@id/content"
+                tools:layout_editor_absoluteX="8dp"/>
+
             <RadioGroup
                 android:id="@+id/categoryRecipeCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/content">
+                app:layout_constraintTop_toBottomOf="@+id/author">
 
                 <RadioButton
                     android:id="@+id/checkBoxEuropean"
