--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
@@ -18,15 +17,16 @@
             app:destination="@+id/newOrEditedRecipeFragment" />
         <action
             android:id="@+id/action_feedFragment_to_favouriteRecipeFragment"
-            app:destination="@id/favouriteRecipeFragment" />
+            app:destination="@+id/favouriteRecipeFragment" />
 
         <argument
             android:name="ShowAppBar"
             android:defaultValue="true" />
         <action
             android:id="@+id/action_feedFragment_to_categoryFilterFragment"
-            app:destination="@id/categoryFilterFragment" />
+            app:destination="@+id/categoryFilterFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/separateRecipeFragment"
         android:name="ru.samirkad.kadrecipe.view.SeparateRecipeFragment"
@@ -36,18 +36,20 @@
             app:argType="long"
             app:nullable="false" />
         <action
-            android:id="@+id/action_separateRecipeFragment_to_newRecipeFragment"
-            app:destination="@id/newOrEditedRecipeFragment" />
+            android:id="@+id/action_separateRecipeFragment_to_newOrEditedRecipeFragment"
+            app:destination="@+id/newOrEditedRecipeFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/newOrEditedRecipeFragment"
-        android:name="ru.samirkad.kadrecipe.view.NewOrEditRecipe"
-        tools:layout="@layout/new_recipe_fragment">
+        android:name="ru.samirkad.kadrecipe.view.NewOrEditedRecipeFragment"
+        tools:layout="@layout/new_recipe_fragment" >
         <argument
             android:name="currentRecipe"
-            app:argType="ru.samirkad.kadrecipe.model.RecipeDto"
+            app:argType="ru.samirkad.kadrecipe.dto.RecipeDto"
             app:nullable="true" />
     </fragment>
+
     <fragment
         android:id="@+id/favouriteRecipeFragment"
         android:name="ru.samirkad.kadrecipe.view.FavouriteRecipeFragment"
@@ -55,18 +57,18 @@
         tools:layout="@layout/favourite_fragment">
         <action
             android:id="@+id/action_favouriteRecipeFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
-
+            app:destination="@+id/feedFragment" />
         <argument
             android:name="ShowAppBar"
             android:defaultValue="true" />
         <action
             android:id="@+id/action_favouriteRecipeFragment_to_separateRecipeFragment"
-            app:destination="@id/separateRecipeFragment" />
+            app:destination="@+id/separateRecipeFragment" />
         <action
             android:id="@+id/action_favouriteRecipeFragment_to_newOrEditedRecipeFragment"
-            app:destination="@id/newOrEditedRecipeFragment" />
+            app:destination="@+id/newOrEditedRecipeFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/categoryFilterFragment"
         android:name="ru.samirkad.kadrecipe.view.CategoryFilterFragment"
@@ -77,6 +79,6 @@
             android:defaultValue="true" />
         <action
             android:id="@+id/action_categoryFilterFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
+            app:destination="@+id/feedFragment" />
     </fragment>
 </navigation>
